--- a/tetriomusic/index.html
+++ b/tetriomusic/index.html
@@ -1,3 +1,4 @@
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>TETR.IO OST Usage Rights</title>
 <h1 id="tetr-io-ost-usage-rights">TETR.IO OST Usage Rights</h1>
 <h2 id="use-of-the-original-audio">Use of the Original Audio</h2>
