--- a/tetriomusic/index.html
+++ b/tetriomusic/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <style>body {max-width: 50em; text-align: justify;}</style>
 <title>TETR.IO OST Usage Rights</title>
@@ -12,7 +13,7 @@
    <li>
       Direct mirrors of the OST are not allowed (i.e. YouTube, SoundCloud).
       <ul>
-         <li><em>...except</em> in the case of archival (i.e. archive.org), where the purpose of the upload is <strong>solely</strong> to archive media, and the user does not benifit in any way, such as with views and likes. I strongly believe that archival is extremely important, and should bypass copyright concerns.</li>
+         <li><em>...except</em> in the case of archival (i.e. archive.org), where the purpose of the upload is <strong>solely</strong> to archive media, and the user does not benifit in any way, such as with views and likes. I strongly believe that archival is extremely important and should bypass copyright concerns.</li>
       </ul>
    </li>
 </ul>
@@ -22,7 +23,7 @@
 </ul>
 <h3 id="use-in-rhythm-games">Use in Rhythm Games</h3>
 <ul>
-   <li>If the song is a part of the base game or official DLC — free or otherwise — a license to use the song is required</li>
+   <li>If the song is a part of the base game or official DLC — free or otherwise — a license to use the song is required.</li>
    <li>
       However, in the case of user-generated content (UGC), where a player of the game shares a map using level-editing tools in community spaces, a license is not required, provided the map was made in good faith, contains proper metadata and is free for everyone to play.
       <ul>
