--- a/tetriomusicuse/index.html
+++ b/tetriomusicuse/index.html
@@ -17,7 +17,7 @@
       </ul>
    </li>
 </ul>
-<h3 id="use-in-games-that-are-not-rhythm-games">Use in Games that are <strong>not</strong> Rhythm games</h3>
+<h3 id="use-in-games-that-are-not-rhythm-games">Use in Games That Are <strong>Not</strong> Rhythm Games</h3>
 <ul>
    <li>Not allowed</li>
 </ul>
