i cannot spell like at all

--- a/tetriomusicuse/index.html
+++ b/tetriomusicuse/index.html
@@ -13,7 +13,7 @@
    <li>
       Direct mirrors of the OST are not allowed (i.e. YouTube, SoundCloud).
       <ul>
-         <li><em>...except</em> in the case of archival (i.e. archive.org), where the purpose of the upload is <strong>solely</strong> to archive media, and the user does not benifit in any way, such as with views and likes. I strongly believe that archival is extremely important and should bypass copyright concerns.</li>
+         <li><em>...except</em> in the case of archival (i.e. archive.org), where the purpose of the upload is <strong>solely</strong> to archive media, and the user does not benefit in any way, such as with views and likes. I strongly believe that archival is extremely important and should bypass copyright concerns.</li>
       </ul>
    </li>
 </ul>
