like i actually cannot type

--- a/tetriomusicuse/index.html
+++ b/tetriomusicuse/index.html
@@ -36,9 +36,9 @@
 <ul>
    <li>Please contact us for further information.</li>
 </ul>
-<p><em>While I do request that you source your audio from the official release, I have an extremely strong opposition to any form of DRM. I will not check or verify that your sourcing of the OST is legitimate. Whether you source the OST through the official release, by ripping the game, getting them from unofficial sources or by using tools to download copies off of the streaming mirrors such as YouTube is <strong>not</strong> something I would be comfortable auditing. While unauthorized distribution is not condoned, this policy focuses on usage rights rather than sourcing methods.</em></p>
+<p><em>While I do request that you source your audio from the official release, I have an extremely strong opposition to any form of DRM. I will not check or verify that your sourcing of the OST is legitimate. Whether you source the OST through the official release, by ripping the game, getting them from unofficial sources or by using tools to download copies from the streaming mirrors such as YouTube is <strong>not</strong> something I would be comfortable auditing. While unauthorized distribution is not condoned, this policy focuses on usage rights rather than sourcing methods.</em></p>
 <p><em>All else being said, I reserve the rights to and ownership over the music, and if the song is used without a license even if it follows these guidelines, I reserve the right to request removal at any time for any reason if I feel the need to. This is primarily to ensure protection against bad actors from using these terms as a loophole.</em></p>
-<h2 id="deritive-works">Deritive Works</h2>
+<h2 id="derivative-works">Derivative Works</h2>
 <h3 id="live-covers-or-arrangements">Live Covers or Arrangements</h3>
 <ul>
    <li>I have nothing but respect for people who play instruments live. I strongly believe that performing any song bears a lot of weight and work on the performer, even if they did not compose the song. You have the rights to any performances of my TETR.IO compositions, even if you choose to sell them or put them through distributors. This applies even if your composition source was from the official scores of the songs, as long as it is your performance or a performance you hold the rights to. Please consider attribution.</li>
@@ -46,7 +46,7 @@
 <h3 id="remixes">Remixes</h3>
 <ul>
    <li>
-      So long as the remix is something that a reasonable person can consider it a transformative modification where the producer has done a substaintial amount of creative work, you are free to share, sell and distribute. Please consider attribution.
+      So long as the remix is something that a reasonable person can consider it a transformative modification where the producer has done a substantial amount of creative work, you are free to share, sell and distribute. Please consider attribution.
       <ul>
          <li>This is true even if the remix uses stems from the original songs, as long as it follows the rules of being transformative.</li>
          <li>Nightcore, beat skips, songs with minimal edits are not considered transformative.</li>
@@ -59,11 +59,11 @@
       As long as the score is from you and not a direct copy of the official scores, you are free to share them as long as the consumer pays no cost.
       <ul>
          <li>If the score is primarily a direct transcription of the composition, selling them requires a license.</li>
-         <li>If the score deviates to a point such that a reasonable person can consider it a transformative modification where the arranger has done a substaintial amount of creative work, you are free to sell them without a license.</li>
+         <li>If the score deviates to a point such that a reasonable person can consider it a transformative modification where the arranger has done a substantial amount of creative work, you are free to sell them without a license.</li>
       </ul>
    </li>
 </ul>
 <h2 id="sublicensing">Sublicensing</h2>
 <ul>
-   <li>osk has a right to sublicense the songs without going through me. If you recieved permission from him for whatever reason, you do not need to contact me.</li>
+   <li>osk has a right to sublicense the songs without going through me. If you received permission from him for whatever reason, you do not need to contact me.</li>
 </ul>
