--- a/tetriomusicuse/index.html
+++ b/tetriomusicuse/index.html
@@ -1,14 +1,18 @@
 <!DOCTYPE html>
+<html lang="en">
+<head>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <style>body {max-width: 50em; text-align: justify;}</style>
 <title>TETR.IO OST Usage Rights</title>
+</head>
 
+<body>
 <h1 id="tetr-io-ost-usage-rights">TETR.IO OST Usage Rights</h1>
 <h2 id="use-of-the-original-audio">Use of the Original Audio</h2>
 <h3 id="use-as-bgm-background-music-in-videos-and-live-streams">Use as BGM (Background Music) in Videos and Live Streams</h3>
 <ul>
    <li>If a video or stream, monetized or not, is related to TETR.IO or is of TETR.IO itself, no license or attribution is required.</li>
-   <li>If a video, monetized or not, is not related to TETR.IO and the music serves the purpose of BGM and the music itself is not the purpose of the video, an attribution is requested, but a license is not.</li>
+   <li>If a video, monetized or not, is not related to TETR.IO and the music serves the purpose of BGM and the music itself is not the purpose of the video, no license is required. However, please consider attribution.</li>
    <li>If a stream, monetized or not, is not TETR.IO related and the music is part of a larger BGM playlist, no license or attribution is required.</li>
    <li>
       Direct mirrors of the OST are not allowed (i.e. YouTube, SoundCloud).
@@ -67,3 +71,5 @@
 <ul>
    <li>osk has a right to sublicense the songs without going through me. If you received permission from him for whatever reason, you do not need to contact me.</li>
 </ul>
+</body>
+</html>
