--- a/tetriomusicuse/index.html
+++ b/tetriomusicuse/index.html
@@ -1,75 +1,223 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<style>body {max-width: 50em; text-align: justify;}</style>
-<title>TETR.IO OST Usage Rights</title>
-</head>
+  <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="UTF-8" />
+    <meta
+      name="description"
+      content="Official Dr Ocelot TETR.IO Original Game Soundtrack usage policy."
+    />
+    <link
+      rel="preload"
+      href="/font/noto-sans.woff2"
+      as="font"
+      type="font/woff2"
+      crossorigin="anonymous"
+    />
+    <link
+      rel="preload"
+      href="/font/noto-sans-italic.woff2"
+      as="font"
+      type="font/woff2"
+      crossorigin="anonymous"
+    />
+    <title>TETR.IO OST Usage Policy</title>
+    <style>
+      @font-face {
+        font-family: "Noto Sans";
+        src:
+          url("/font/noto-sans.woff2") format("woff2"),
+          url("/font/noto-sans.ttf") format("truetype");
+        font-weight: 100 900;
+        font-stretch: 62.5% 100%;
+        font-style: normal;
+        font-display: swap;
+      }
+      @font-face {
+        font-family: "Noto Sans Italic";
+        src:
+          url("/font/noto-sans-italic.woff2") format("woff2"),
+          url("/font/noto-sans-italic.ttf") format("truetype");
+        font-weight: 100 900;
+        font-stretch: 62.5% 100%;
+        font-style: italic;
+        font-display: swap;
+      }
+      body {
+        color: #000;
+        background-color: #fff;
+        max-width: 50em;
+        text-align: justify;
+        font-family: "Noto Sans", sans-serif;
+        margin: 0 auto;
+      }
+      h1 {
+        font-weight: 100;
+      }
+      h2 {
+        font-weight: 800;
+        letter-spacing: 0.25em;
+        text-transform: uppercase;
+      }
+      @media (prefers-color-scheme: dark) {
+        body {
+          background-color: #121212;
+          color: #ffffff;
+        }
+      }
+    </style>
+  </head>
 
-<body>
-<h1 id="tetr-io-ost-usage-rights">TETR.IO OST Usage Rights</h1>
-<h2 id="use-of-the-original-audio">Use of the Original Audio</h2>
-<h3 id="use-as-bgm-background-music-in-videos-and-live-streams">Use as BGM (Background Music) in Videos and Live Streams</h3>
-<ul>
-   <li>If a video or stream, monetized or not, is related to TETR.IO or is of TETR.IO itself, no license or attribution is required.</li>
-   <li>If a video, monetized or not, is not related to TETR.IO and the music serves the purpose of BGM and the music itself is not the purpose of the video, no license is required. However, please consider attribution.</li>
-   <li>If a stream, monetized or not, is not TETR.IO related and the music is part of a larger BGM playlist, no license or attribution is required.</li>
-   <li>
-      Direct mirrors of the OST are not allowed (i.e. YouTube, SoundCloud).
-      <ul>
-         <li><em>...except</em> in the case of archival (i.e. archive.org), where the purpose of the upload is <strong>solely</strong> to archive media, and the user does not benefit in any way, such as with views and likes. I strongly believe that archival is extremely important and should bypass copyright concerns.</li>
-      </ul>
-   </li>
-</ul>
-<h3 id="use-in-games-that-are-not-rhythm-games">Use in Games That Are <strong>Not</strong> Rhythm Games</h3>
-<ul>
-   <li>Not allowed</li>
-</ul>
-<h3 id="use-in-rhythm-games">Use in Rhythm Games</h3>
-<ul>
-   <li>If the song is a part of the base game or official DLC — free or otherwise — a license to use the song is required.</li>
-   <li>
-      However, in the case of user-generated content (UGC), where a player of the game shares a map using level-editing tools in community spaces, a license is not required, provided the map was made in good faith, contains proper metadata and is free for everyone to play.
-      <ul>
-         <li>I strongly request that you cut down the song from its original length.</li>
-         <li>The audio file must not be a direct lossless copy of the song from the OST purchase.</li>
-      </ul>
-   </li>
-</ul>
-<h3 id="other">Other</h3>
-<ul>
-   <li>Please contact us for further information.</li>
-</ul>
-<p><em>While I do request that you source your audio from the official release, I have an extremely strong opposition to any form of DRM. I will not check or verify that your sourcing of the OST is legitimate. Whether you source the OST through the official release, by ripping the game, getting them from unofficial sources or by using tools to download copies from the streaming mirrors such as YouTube is <strong>not</strong> something I would be comfortable auditing. While unauthorized distribution is not condoned, this policy focuses on usage rights rather than sourcing methods.</em></p>
-<p><em>All else being said, I reserve the rights to and ownership over the music, and if the song is used without a license even if it follows these guidelines, I reserve the right to request removal at any time for any reason if I feel the need to. This is primarily to ensure protection against bad actors from using these terms as a loophole.</em></p>
-<h2 id="derivative-works">Derivative Works</h2>
-<h3 id="live-covers-or-arrangements">Live Covers or Arrangements</h3>
-<ul>
-   <li>I have nothing but respect for people who play instruments live. I strongly believe that performing any song bears a lot of weight and work on the performer, even if they did not compose the song. You have the rights to any performances of my TETR.IO compositions, even if you choose to sell them or put them through distributors. This applies even if your composition source was from the official scores of the songs, as long as it is your performance or a performance you hold the rights to. Please consider attribution.</li>
-</ul>
-<h3 id="remixes">Remixes</h3>
-<ul>
-   <li>
-      So long as the remix is something that a reasonable person can consider it a transformative modification where the producer has done a substantial amount of creative work, you are free to share, sell and distribute. Please consider attribution.
-      <ul>
-         <li>This is true even if the remix uses stems from the original songs, as long as it follows the rules of being transformative.</li>
-         <li>Nightcore, beat skips, songs with minimal edits are not considered transformative.</li>
-      </ul>
-   </li>
-</ul>
-<h3 id="scores">Scores</h3>
-<ul>
-   <li>
-      As long as the score is from you and not a direct copy of the official scores, you are free to share them as long as the consumer pays no cost.
-      <ul>
-         <li>If the score is primarily a direct transcription of the composition, selling them requires a license.</li>
-         <li>If the score deviates to a point such that a reasonable person can consider it a transformative modification where the arranger has done a substantial amount of creative work, you are free to sell them without a license.</li>
-      </ul>
-   </li>
-</ul>
-<h2 id="sublicensing">Sublicensing</h2>
-<ul>
-   <li>osk has a right to sublicense the songs without going through me. If you received permission from him for whatever reason, you do not need to contact me.</li>
-</ul>
-</body>
+  <body>
+    <h1>TETR.IO OST Usage Policy</h1>
+    <hr />
+    <h2 id="use-of-the-original-audio">Use of the Original Audio</h2>
+    <h3 id="use-as-bgm-background-music-in-videos-and-live-streams">
+      Use as BGM (Background Music) in Videos and Live Streams
+    </h3>
+    <ul>
+      <li>
+        If a video or stream, monetized or not, is related to TETR.IO or is of
+        TETR.IO itself, no license or attribution is required.
+      </li>
+      <li>
+        If a video, monetized or not, is not related to TETR.IO and the music
+        serves the purpose of BGM and the music itself is not the purpose of the
+        video, no license is required. However, please consider attribution.
+      </li>
+      <li>
+        If a stream, monetized or not, is not TETR.IO related and the music is
+        part of a larger BGM playlist, no license or attribution is required.
+      </li>
+      <li>
+        Direct mirrors of the OST are not allowed (i.e. YouTube, SoundCloud).
+        <ul>
+          <li>
+            <em>...except</em> in the case of archival (i.e. archive.org), where
+            the purpose of the upload is <strong>solely</strong> to archive
+            media, and the user does not benefit in any way, such as with views
+            and likes. I strongly believe that archival is extremely important
+            and should bypass copyright concerns.
+          </li>
+        </ul>
+      </li>
+    </ul>
+    <h3 id="use-in-games-that-are-not-rhythm-games">
+      Use in Games That Are <strong>Not</strong> Rhythm Games
+    </h3>
+    <ul>
+      <li>Not allowed.</li>
+    </ul>
+    <h3 id="use-in-rhythm-games">Use in Rhythm Games</h3>
+    <ul>
+      <li>
+        If the song is a part of the base game or official DLC — free or
+        otherwise — a license to use the song is required.
+      </li>
+      <li>
+        However, in the case of user-generated content (UGC), where a player of
+        the game shares a map using level-editing tools in community spaces, a
+        license is not required, provided the map was made in good faith,
+        contains proper metadata and is free for everyone to play.
+        <ul>
+          <li>
+            I strongly request that you cut down the song from its original
+            length.
+          </li>
+          <li>
+            The audio file must not be a direct lossless copy of the song from
+            the OST purchase.
+          </li>
+        </ul>
+      </li>
+    </ul>
+    <h3 id="other">Other</h3>
+    <ul>
+      <li>Please contact us for further information.</li>
+    </ul>
+    <p>
+      <em>
+        While I do request that you source your audio from the official release,
+        I have an extremely strong opposition to any form of DRM. I will not
+        check or verify that your sourcing of the OST is legitimate. Whether you
+        source the OST through the official release, by ripping the game,
+        getting them from unofficial sources or by using tools to download
+        copies from the streaming mirrors such as YouTube is
+        <strong>not</strong> something I would be comfortable auditing. While
+        unauthorized distribution is not condoned, this policy focuses on usage
+        rights rather than sourcing methods.
+      </em>
+    </p>
+    <p>
+      <em>
+        All else being said, I reserve the rights to and ownership over the
+        music, and if the song is used without a license even if it follows
+        these guidelines, I reserve the right to request removal at any time for
+        any reason if I feel the need to. This is primarily to ensure protection
+        against bad actors from using these terms as a loophole.
+      </em>
+    </p>
+    <hr />
+    <h2 id="derivative-works">Derivative Works</h2>
+    <h3 id="live-covers-or-arrangements">Live Covers or Arrangements</h3>
+    <ul>
+      <li>
+        I have nothing but respect for people who play instruments live. I
+        strongly believe that performing any song bears a lot of weight and work
+        on the performer, even if they did not compose the song. You have the
+        rights to any performances of my TETR.IO compositions, even if you
+        choose to sell them or put them through distributors. This applies even
+        if your composition source was from the official scores of the songs, as
+        long as it is your performance or a performance you hold the rights to.
+        Please consider attribution.
+      </li>
+    </ul>
+    <h3 id="remixes">Remixes</h3>
+    <ul>
+      <li>
+        So long as the remix is something that a reasonable person can consider
+        a transformative modification where the producer has done a substantial
+        amount of creative work, you are free to share, sell and distribute.
+        Please consider attribution.
+        <ul>
+          <li>
+            This is true even if the remix uses stems from the original songs,
+            as long as it follows the rules of being transformative.
+          </li>
+          <li>
+            Nightcore, beat skips, songs with minimal edits are not considered
+            transformative.
+          </li>
+        </ul>
+      </li>
+    </ul>
+    <h3 id="scores">Scores</h3>
+    <ul>
+      <li>
+        As long as the score is from you and not a direct copy of the official
+        scores, you are free to share them as long as the consumer pays no cost.
+        <ul>
+          <li>
+            If the score is primarily a direct transcription of the composition,
+            selling them requires a license.
+          </li>
+          <li>
+            If the score deviates to a point such that a reasonable person can
+            consider it a transformative modification where the arranger has
+            done a substantial amount of creative work, you are free to sell
+            them without a license.
+          </li>
+        </ul>
+      </li>
+    </ul>
+    <hr />
+    <h2 id="sublicensing">Sublicensing</h2>
+    <ul>
+      <li>
+        osk has a right to sublicense the songs without going through me. If you
+        received permission from him for whatever reason, you do not need to
+        contact me.
+      </li>
+    </ul>
+  </body>
 </html>
