do i not know how to program or what

--- a/contact/index.html
+++ b/contact/index.html
@@ -82,7 +82,7 @@
         a:visited,
         a:hover,
         a:active {
-          color: #de34eb;
+          color: #9910a2;
         }
     </style>
   </head>
