--- a/404.html
+++ b/404.html
@@ -84,7 +84,7 @@
         a:visited,
         a:hover,
         a:active {
-          color: #de34eb;
+          color: #9910a2;
         }
     </style>
   </head>
