--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
         a:visited,
         a:hover,
         a:active {
-          color: #de34eb;
+          color: #9910a2;
         }
       }
     </style>
