wtf is wrong with me LOL

--- a/404.html
+++ b/404.html
@@ -78,13 +78,13 @@
           filter: none;
         }
         a {
-          color: #9910a2;
+          color: #de34eb;
         }
 
         a:visited,
         a:hover,
         a:active {
-          color: #9910a2;
+          color: #de34eb;
         }
     </style>
   </head>
