--- a/contact/index.html
+++ b/contact/index.html
@@ -76,13 +76,13 @@
           color: #ffffff;
         }
         a {
-          color: #9910a2;
+          color: #de34eb;
         }
 
         a:visited,
         a:hover,
         a:active {
-          color: #9910a2;
+          color: #de34eb;
         }
     </style>
   </head>
